--- a/cms/app/views/dm_cms/admin/cms_snippets/index.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_snippets/index.html.erb
@@ -1,5 +1,5 @@
 <% toolbar = capture do %>
-  <%= link_to icons(:new), new_admin_cms_snippet_path, title: 'New Snippet', class: 'btn btn-link btn-icon' %>
+  <%= link_to icons(:new), new_admin_cms_snippet_path, title: 'New Snippet', class: 'btn btn-xs btn-default' %>
 <% end %>
 <%= panel title: 'List of Snippets', body: false, toolbar: toolbar do %>
   <table class="table table-striped table-bordered">
