--- a/core/app/views/dm_core/admin/dashboard/_widget_recent_user_activity.html.erb
+++ b/core/app/views/dm_core/admin/dashboard/_widget_recent_user_activity.html.erb
@@ -1,4 +1,4 @@
-<%= panel title: 'Recent User Activity', body: false do %>
+<%= panel title: icon_label(:users, 'Recent User Activity'), body: false do %>
   <ul class="page-stats list-justified nomargin_bottom">
     <li><%= render partial: 'dm_core/admin/shared/header_stats_user_activity' %></li>
   </ul>
