--- a/core/app/views/dm_core/admin/system/show.html.erb
+++ b/core/app/views/dm_core/admin/system/show.html.erb
@@ -1,4 +1,4 @@
-<% toolbar = toolbar_btn(icons(:new), dm_core.admin_account_new_path, title: 'New Site', class: "btn btn-link btn-icon") %>
+<% toolbar = toolbar_btn(icons(:new), dm_core.admin_account_new_path, title: 'New Site', class: "btn btn-xs btn-default") %>
 <%= panel body: false, title: 'Account List', toolbar: toolbar do %>
   <table class="table table-striped table-bordered table-block">
     <thead>
