--- a/core/app/views/dm_core/admin/users/index.html.erb
+++ b/core/app/views/dm_core/admin/users/index.html.erb
@@ -1,21 +1,19 @@
 <% content_for :content_title_extra do %>
-  <div class="header-bar-stats">
-    <div class="collapse" id="header-bar-stats">
-      <div class="well">
-        <ul class="page-stats">
-          <li><%= render partial: 'dm_core/admin/shared/header_stats_new_users' %></li>
-          <li><%= render partial: 'dm_core/admin/shared/header_stats_user_activity' %></li>
-        </ul>
-      </div>
+    <%= page_header_buttons do %>
+    <div class="header-bar-stats">
+      <ul class="page-stats">
+        <li><%= render partial: 'dm_core/admin/shared/header_stats_new_users' %></li>
+        <li><%= render partial: 'dm_core/admin/shared/header_stats_user_activity' %></li>
+      </ul>
     </div>
-  </div>
+    <% end %>
 <% end %>
-<%= panel title: 'Users', body: false do %>
+<%= panel title: icon_label(:users, 'Users'), body: true do %>
   <div class="datatable">
-    <table id="user_table" class="table table-striped table-condensed table-bordered" data-source="<%= dm_core.admin_users_url %>">
+    <table id="user_table" class="table table-striped table-bordered" data-source="<%= dm_core.admin_users_url %>">
       <thead>
         <tr>
-          <th width="40"></th>
+          <th width="10"></th>
           <th>Name</th>
           <th>Email</th>
           <th>Country</th>
