--- a/cms/app/views/dm_cms/admin/cms_contentitems/_form.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_contentitems/_form.html.erb
@@ -4,7 +4,7 @@
 
 <% content_for :content_title_extra do %>
   <%= page_header_buttons do %>
-    <%= link_to icon_label(:view, 'View Page'), url_for("/#{current_account.preferred_default_locale}/#{@current_page.slug}"), title: 'View Page', class: 'btn btn-xs btn-default', target: '_blank' %>
+    <%= link_to icons(:view), url_for("/#{current_account.preferred_default_locale}/#{@current_page.slug}"), title: 'View Page', class: 'btn btn-sm btn-default', target: '_blank' %>
   <% end %>
 <% end %>
 
@@ -14,8 +14,8 @@
   <%= f.error_notification message: "Please review the problems below" %>
   <%= f.hidden_field :original_updated_on %>
   <% toolbar = capture do %>
-    <%= link_to icons(:help), '#', class: 'btn btn-link btn-icon', data: { toggle: 'modal', target: '#tag_reference' } %>
-    <%= link_to icons(:cancel), admin_cms_page_url(@current_page), class: 'btn btn-link btn-icon' %>
+    <%= link_to icons(:help), '#', class: 'btn btn-xs btn-default', data: { toggle: 'modal', target: '#tag_reference' } %>
+    <%= link_to icons(:cancel), admin_cms_page_url(@current_page), class: 'btn btn-xs btn-default' %>
   <% end %>
   <%= panel title: title, toolbar: toolbar do %>
     <%= locale_tabs  do |locale| %>
