--- a/cms/app/views/dm_cms/admin/cms_pages/_form.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_pages/_form.html.erb
@@ -7,9 +7,9 @@
 
   <%= f.error_notification message: "Please review the problems below" %>
   <% toolbar = capture do %>
-    <%= link_to icons(:cancel), {action: :show, id: @current_page}, class: 'btn btn-link btn-icon' %>
+    <%= link_to icons(:cancel), {action: :show, id: @current_page}, class: 'btn btn-xs btn-default' %>
   <% end %>
-  <%= panel title: 'Page Details', toolbar: toolbar do %>
+  <%= panel title: title, toolbar: toolbar do %>
     <%= locale_tabs do |locale| %>
       <%= f.input "title_#{locale}", label: 'Page Title', hint: 'The title of the page, shown in the browser title' %>
       <%= f.input "menutitle_#{locale}", label: 'Menu Title', hint: 'Text shown in a menu (which might be shorter than the full title).  If blank, page will not show up in any auto-generated menus' %>
