--- a/cms/app/views/dm_cms/admin/cms_posts/_form.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_posts/_form.html.erb
@@ -4,9 +4,9 @@
   <% content_for :content_title_extra do %>
     <%= page_header_buttons do %>
       <%= present(@post).label_published %>
-      <%= link_to(icon_label(:view, 'View'), post_show_url(@blog, @post), class: "btn btn-xs btn-default", title: 'View', target: '_blank') %>
+      <%= link_to(icons(:view), post_show_url(@blog, @post), class: "btn btn-sm btn-default", title: 'View', target: '_blank') %>
       <div class="btn-group">
-        <button class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown"><%= icons(:gear) %> <span class="caret"></span></button>
+        <button class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown"><%= icons(:gear) %> <span class="caret"></span></button>
         <ul class="dropdown-menu dropdown-menu-right icons-right">
           <% if @post.notification_sent_on.nil? %>
             <li><%= link_to 'Send Notification Emails', send_notifications_emails_admin_cms_blog_cms_post_path(@blog, @post), method: :put, data: {confirm: 'This will send a post notification email to each user of this blog.  Are you sure?'} %></li>
@@ -29,10 +29,10 @@
 
   <%= f.error_notification message: "Please review the problems below" %>
   <% toolbar = capture do %>
-    <%= link_to icons(:help), '#', class: 'btn btn-link btn-icon', data: { toggle: 'modal', target: '#tag_reference' } %>
-    <%= link_to icons(:cancel), admin_cms_blog_path(@blog), class: 'btn btn-link btn-icon' %>
+    <%= link_to icons(:help), '#', class: 'btn btn-xs btn-default', data: { toggle: 'modal', target: '#tag_reference' } %>
+    <%= link_to icons(:cancel), admin_cms_blog_path(@blog), class: 'btn btn-xs btn-default' %>
   <% end %>
-  <%= panel toolbar: toolbar do %>
+  <%= panel title: icon_label(:edit, @post.new_record? ? 'Create Post' : 'Edit Post'), toolbar: toolbar do %>
     <%= f.input :published_on, as: :datetime_picker, required: false, wrapper: :bs3_horizontal_nosize, 
                 label_html: {class: 'col-sm-2'}, input_wrapper_html: {class: 'col-sm-4'},
                 hint: 'Leave blank for DRAFT mode' %>
