--- a/cms/app/views/dm_cms/admin/cms_snippets/_form.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_snippets/_form.html.erb
@@ -4,10 +4,10 @@
 
   <%= f.error_notification message: "Please review the problems below" %>
   <% toolbar = capture do %>
-    <%= link_to icons(:help), '#', class: 'btn btn-link btn-icon', data: { toggle: 'modal', target: '#tag_reference' } %>
-    <%= link_to icons(:cancel), admin_cms_snippets_path, class: 'btn btn-link btn-icon' %>
+    <%= link_to icons(:help), '#', class: 'btn btn-default btn-xs', data: { toggle: 'modal', target: '#tag_reference' } %>
+    <%= link_to icons(:cancel), admin_cms_snippets_path, class: 'btn btn-default btn-xs' %>
   <% end %>
-  <%= panel toolbar: toolbar do %>
+  <%= panel title: 'Edit Snippet', toolbar: toolbar do %>
     <%= f.input :slug, label: 'Slug', required: true %>
     <%= f.input :description, label: 'Description' %>
     <%= f.input :published, as: :toggle, label: 'Publish It?' %>
