--- a/core/app/views/dm_core/admin/dashboard/_widget_recent_new_users.html.erb
+++ b/core/app/views/dm_core/admin/dashboard/_widget_recent_new_users.html.erb
@@ -1,4 +1,4 @@
-<%= panel title: 'Recent New Users', body: false do %>
+<%= panel title: icon_label(:users, 'Recent New Users'), body: false do %>
   <ul class="page-stats list-justified nomargin_bottom">
     <li><%= render partial: 'dm_core/admin/shared/header_stats_new_users' %></li>
   </ul>
