--- a/event/app/views/dm_event/admin/workshops/show.html.erb
+++ b/event/app/views/dm_event/admin/workshops/show.html.erb
@@ -31,7 +31,7 @@
 
 <div class="row">
   <div class="col-md-9">
-    <% toolbar  = toolbar_btn(icons(:new), register_new_url(@workshop), target: '_blank', title: 'New Registration', class: "btn btn-link btn-icon") %>
+    <% toolbar  = toolbar_btn(icons(:new), register_new_url(@workshop), target: '_blank', title: 'New Registration', class: "btn btn-xs btn-default") %>
     <% if can?(:manage_event_registrations, @workshop) || can?(:manage_event_finances, @workshop) %>
       <% title    = params[:duplicates].nil? ? 'Registrations' : 'Registrations (Duplicates)'%>
     <% else %>
