--- a/forum/app/views/dm_forum/admin/forum_categories/_form.html.erb
+++ b/forum/app/views/dm_forum/admin/forum_categories/_form.html.erb
@@ -4,7 +4,7 @@
 
   <%= f.error_notification message: "Please review the problems below" %>
   <% toolbar = capture do %>
-    <%= link_to icons(:cancel), [:admin, @forum_category], class: 'btn btn-link btn-icon' %>
+    <%= link_to icons(:cancel), [:admin, @forum_category], class: 'btn btn-xs btn-default' %>
   <% end %>
   <%= panel title: @title, toolbar: toolbar do %>
     <%= locale_tabs do |locale| %>
