--- a/forum/app/views/dm_forum/admin/forum_categories/index.html.erb
+++ b/forum/app/views/dm_forum/admin/forum_categories/index.html.erb
@@ -1,6 +1,6 @@
 <% content_for :content_title, icon_label('font-comments', 'Forum Categories') %>
 
-<% toolbar = toolbar_btn(icons(:new), new_admin_forum_category_path, title: 'New Category', class: "btn btn-link btn-icon") %>
+<% toolbar = toolbar_btn(icons(:new), new_admin_forum_category_path, title: 'New Category', class: "btn btn-xs btn-default") %>
 <%= panel body: false, toolbar: toolbar do %>
   <table id="drag_sort" class="table table-striped table-bordered table-block" data-update_url="<%= dm_forum.admin_forum_category_sort_path %>">
     <thead>
