--- a/forum/app/views/dm_forum/admin/forum_categories/show.html.erb
+++ b/forum/app/views/dm_forum/admin/forum_categories/show.html.erb
@@ -5,7 +5,7 @@
   <% end %>
 <% end %>
 
-<% toolbar = toolbar_btn(icons(:new), new_admin_forum_category_forum_path(@forum_category), title: 'New Forum', class: "btn btn-link btn-icon") %>
+<% toolbar = toolbar_btn(icons(:new), new_admin_forum_category_forum_path(@forum_category), title: 'New Forum', class: "btn btn-xs btn-default") %>
 <%= panel title: 'Forums', toolbar: toolbar, body: false do %>
   <div class="table-overflow">
     <table id="drag_sort" class="table table-striped table-bordered table-block" data-update_url="<%= dm_forum.admin_forum_sort_path %>">
