--- a/forum/app/views/dm_forum/admin/forum_sites/_form.html.erb
+++ b/forum/app/views/dm_forum/admin/forum_sites/_form.html.erb
@@ -4,7 +4,7 @@
   <%= f.error_notification message: "Please review the problems below" %>
 
   <% toolbar = capture do %>
-    <%= link_to icons(:cancel), dm_forum.admin_forum_site_url, class: 'btn btn-link btn-icon' %>
+    <%= link_to icons(:cancel), dm_forum.admin_forum_site_url, class: 'btn btn-xs btn-default' %>
   <% end %>
 	<%= panel title: @title, toolbar: toolbar do %>
 
